# alith-telegram-bot

./: .env.example  .gitignore  README.md  deployment_instructions.md  generic_deployment_instructions.md  index.js  package-lock.json  package.json
alith-memory-service/: Cargo.toml
alith-memory-service/src/: main.rs
cobidocs/: AI_DOCUMENTATION.md  alith_article_outline.md  alith_article_part1.md  deployment_instructions.md  feature_implementation_plan.md  future_feature_implementation_ideas.md  update_instructions.md
rust-telegram-bot/: Cargo.toml
rust-telegram-bot/src/: main.rs
