[package]
name = "alith-memory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
alith = { git = "https://github.com/0xLazAI/alith.git" }
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
