[package]
name = "alith-telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Alith SDK
alith = { git = "https://github.com/0xLazAI/alith.git" }

# Telegram bot library
teloxide = { version = "0.13", features = ["macros"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Environment variables
dotenv = "0.15.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
